--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -10,6 +10,10 @@ li {
     list-style: none;
 }
 
+.clear {
+    clear: both;
+}
+
 .header {
     background-color: #FFF7AE;
     height: 90px;
@@ -33,7 +37,6 @@ li {
 }
 
 .main {
-    height: 600px;
     padding: 100px 80px;
 }
 
@@ -48,6 +51,55 @@ li {
 
 .copy-container span {
     color: #ff4a4a;
+}
+
+.contents {
+    height: 500px;
+    margin-top: 100px;
+}
+
+.section-title {
+    border-bottom: 2px solid #dee7ec;
+    font-size: 28px;
+    padding-bottom: 15px;
+    margin-bottom: 50px;
+}
+
+.contents-item {
+    float: left;
+    margin-right: 40px;
+}
+
+.contents-item p {
+    font-size: 24px;
+    margin-top: 30px;
+}
+
+.contact-form {
+    padding-top: 100px;
+}
+
+.contact-form input {
+    width: 400px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 20px;
+    font-size: 18px;
+    border: 1px solid #dee7ec;
+}
+
+.contact-form textarea {
+    width: 400px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 20px;
+    font-size: 18px;
+    border: 1px solid #dee7ec;
+}
+
+.contact-submit {
+    background: #dee7ec;
+    color: #889eab;
 }
 
 .footer {
